fixed overflow issue and added vw

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,19 +4,20 @@ html {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  overflow-x: auto;
 }
 body {
   font-family: 'Muli', sans-serif;
   width: 100%;
   height: 100%;
   background-color: #ffffff;
+  overflow: auto;
 }
 /* NavBar */
 .container {
   text-align: center;
   color: white;
 }
-
 .centered {
   font-weight: 900;
   text-align: center;
@@ -79,6 +80,7 @@ video {
 /* OUR MISSION */
 .mission{
   color: #606060;
+  width: 70vw;
 }
 h3 {
   color: #0067ff;
@@ -182,7 +184,6 @@ h5 {
 .copyright {
   margin-top: 40px;
 }
-
 /* Media queries */
 @media only screen and (min-width: 1024px){
   #video-text{
